--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HEXZbase</title>
+<title>HEXZmixtape</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Hexagonal Zero Base" />
@@ -102,7 +102,7 @@ td {
   word-wrap:break-word;
   padding: 7px;
   box-sizing: border-box;
-  font-size: 13px;
+  font-size: 10px;
   cursor: pointer;
 }
 .container td:nth-child(1) {
@@ -137,7 +137,7 @@ td {
   color: white;
   padding: 5px 10px;
   margin: 20px 0;
-  border-radius: 2px;
+  border-radius: 10px;
 }
 .loader {
   color: white;
@@ -320,11 +320,11 @@ document.addEventListener("DOMContentLoaded", async () => {
 </head>
 <body>
 <nav>
-  <a href="/">HEXZbase</a>
-  <div class='sub'>The entire Hexagonal Zero NFT universe in a single Git repository.</div>
+  <a href="/">HEXZmixtape</a>
+  <div class='sub'>Welcome to the Hexagonal Zero series mixtape.</div>
   <div>
-    <a class='btn' href="https://github.com/mixtape-network/moonbirdbase">Download</a>
-    <a class='btn' href="https://twitter.com/skogard">Twitter</a>
+    <a class='btn' href="https://zerobeings.xyz">Zero Beings</a>
+    <a class='btn' href="https://twitter.com/skogard">Powered by ^</a>
   </div>
   <table>
     <tr>
