--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="HEXZbase" />
 <meta property="og:description" content="The entire Hexagonal Zero universe in a single Git repository." />
-<meta property="og:image" content="images/mixtape.png" />
+<meta property="og:image" content="mixtape.png" />
+<link rel="icon" href="mixtape.png">
 <style>
 @font-face {
   font-family: 'Aldrich';
