--- a/index.html
+++ b/index.html
@@ -325,7 +325,10 @@ document.addEventListener("DOMContentLoaded", async () => {
   <a href="/">HEXZmixtape</a>
   <div class='sub'>Welcome to the Hexagonal Zero series mixtape.</div>
   <div>
+    
     <a class='btn' href="https://zerobeings.xyz">Zero Beings</a>
+    <a class='btn' href="https://twitter.com/Zero_beings">Twitter</a>
+    <a class='btn' href="https://discord.gg/sjbVYr6ZXS">Discord</a>
     <a class='btn' href="https://twitter.com/skogard">Powered by ^</a>
   </div>
   <table>
