--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ td {
   color: white;
   padding: 5px 10px;
   margin: 20px 0;
+  border-color: aqua;
   border-radius: 10px;
 }
 .loader {
@@ -325,7 +326,6 @@ document.addEventListener("DOMContentLoaded", async () => {
   <a href="/">HEXZmixtape</a>
   <div class='sub'>Welcome to the Hexagonal Zero series mixtape.</div>
   <div>
-    
     <a class='btn' href="https://zerobeings.xyz">Zero Beings</a>
     <a class='btn' href="https://twitter.com/Zero_beings">Twitter</a>
     <a class='btn' href="https://discord.gg/sjbVYr6ZXS">Discord</a>
