--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 </head>
 <body>
 <nav>
+  <a class="btn" href="https://mixtape.cell.computer/#/"><img src = "mixtape.png"></a> 
   <a href="/">HEXZmixtape</a>
   <div class='sub'>Welcome to the Hexagonal Zero series mixtape.</div>
   <div>
