--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@ document.addEventListener("DOMContentLoaded", async () => {
 </head>
 <body>
 <nav>
-  <a class="btn" href="https://mixtape.cell.computer/#/"><img src = "mixtape.png"></a> 
   <a href="/">HEXZmixtape</a>
+  <div><a class="btn" href="https://mixtape.cell.computer/#/"><img src = "mixtape.png"></a></div>
   <div class='sub'>Welcome to the Hexagonal Zero series mixtape.</div>
   <div>
     <a class='btn' href="https://zerobeings.xyz">Zero Beings</a>
