--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 <body>
 <nav>
   <a href="/">HEXZmixtape</a>
-  <div><a class="btn" href="https://mixtape.cell.computer/#/"><img src = "mixtape.png"></a></div>
+  <div><a class="btn" href="https://mixtape.cell.computer/#/"><img src = "mixtape.png" width=25% height=25%></a></div>
   <div class='sub'>Welcome to the Hexagonal Zero series mixtape.</div>
   <div>
     <a class='btn' href="https://zerobeings.xyz">Zero Beings</a>
