--- a/index.html
+++ b/index.html
@@ -324,13 +324,13 @@ document.addEventListener("DOMContentLoaded", async () => {
 <body>
 <nav>
   <a href="/">HEXZmixtape</a>
-  <div><a class="btn" href="https://mixtape.cell.computer/#/"><img src = "mixtape.png" width="159" height="98.3"></a></div>
+  <div><a href="https://mixtape.cell.computer/#/" target="_blank"><img src = "mixtape.png" width="159" height="98.3"></a></div>
   <div class='sub'>Welcome to the Hexagonal Zero series mixtape.</div>
   <div>
-    <a class='btn' href="https://zerobeings.xyz">Zero Beings</a>
-    <a class='btn' href="https://twitter.com/Zero_beings">Twitter</a>
-    <a class='btn' href="https://discord.gg/sjbVYr6ZXS">Discord</a>
-    <a class='btn' href="https://twitter.com/skogard">Powered by ^</a>
+    <a class='btn' href="https://zerobeings.xyz" target="_blank">Zero Beings</a>
+    <a class='btn' href="https://twitter.com/Zero_beings" target="_blank">Twitter</a>
+    <a class='btn' href="https://discord.gg/sjbVYr6ZXS" target="_blank">Discord</a>
+    <a class='btn' href="https://twitter.com/skogard" target="_blank">Powered by ^</a>
   </div>
   <table>
     <tr>
