--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 <nav>
   <a href="/">HEXZmixtape</a>
   <div><a href="https://mixtape.cell.computer/#/" target="_blank"><img src = "mixtape.png" width="159" height="98.3"></a></div>
+  <div></div>
   <div class='sub'>Welcome to the Hexagonal Zero series mixtape.</div>
   <div>
     <a class='btn' href="https://zerobeings.xyz" target="_blank">Zero Beings</a>
