--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@ td {
   color: white;
   padding: 5px 10px;
   margin: 20px 0;
-  border-color: aqua;
+  border-color: #B9F49E;
   border-radius: 10px;
+  border-width: 5px;
 }
 .loader {
   color: white;
