--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@ td {
   font-size: 14px;
   font-style: normal;
   letter-spacing: 0;
-  background: rgba(161, 161, 161, 0.9);
+  background: black;
   color: white;
-  padding: 5px 10px;
+  padding: 10px 10px;
   margin: 20px 0;
   border-color: #B9F49E;
   border-radius: 10px;
