--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@ td {
   color: white;
   padding: 10px 10px;
   margin: 20px 0;
-  border-color: #B9F49E;
+  border: 2px solid #B9F49E;
   border-radius: 10px;
-  border-width: 20px;
+  
 }
 .loader {
   color: white;
