--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ td {
   border-bottom: 2px solid rgba(0,0,255,0.04);
 }
 .container tr:hover td {
-  background: lavender;
+  background: #B9F49E;
 }
 #query {
   margin-top: 5px;
