--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ nav a {
   font-weight: bold;
   display: inline-block;
   margin: 10px;
-  color: rgb(134, 134, 134);
+  color: white;
 }
 nav td:nth-child(1) {
   width: 100px;
