--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ td {
 }
 #query {
   margin-top: 5px;
-  background: rgb(65, 188, 225);
+  background: #B9F49E;
   cursor: pointer;
   padding: 10px;
   max-width: 800px;
