--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@ td {
 }
 #query {
   margin-top: 5px;
-  background: #B9F49E;
+  background: rgb(65, 188, 225);
   cursor: pointer;
   padding: 10px;
   max-width: 800px;
   width: 90%;
   box-sizing: border-box;
   color: white;
-  border-radius: 4px;
+  border-radius: 10px;
   border:none;
   font-size: 20px;
   font-family: 'Aldrich';
