--- a/index.html
+++ b/index.html
@@ -88,15 +88,16 @@ nav td {
   width: 200px;
   padding: 5px;
   box-sizing: border-box;
-  border-radius: 10px;
 }
 .item img {
   width: 100%;
+  border-radius: 10px 10px 0px 0px;
 }
 table {
   table-layout: fixed;
   width: 100%;
   border-spacing: 0;
+  border-radius: 0px 0px 10px 10px; 
 }
 td {
   background: white;
