--- a/index.html
+++ b/index.html
@@ -326,15 +326,9 @@ document.addEventListener("DOMContentLoaded", async () => {
 </head>
 <body>
 <nav>
-  <div>
-    <audio
-    controls loop
-    src="Hexagonal_Zero.mp3">
-        Your browser does not support the
-        <code>audio</code> element.
-</audio>
-</div>
+  
   <a href="/">HEXZmixtape</a>
+  <div><audio controls loop src="Hexagonal_Zero.mp3">Your browser does not support the<code>audio</code> element.</audio></div>
   <div><a href="https://mixtape.cell.computer/#/" target="_blank"><img src = "mixtape.png" width="159" height="98.3"></a></div>
   <div class='sub'>Welcome to the Hexagonal Zero series mixtape.</div>
   <div>
