--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Hexagonal Zero Base" />
-<meta name="twitter:description" content="The entire Hexagonal Zero universe in a single Git repository." />
+<meta name="twitter:description" content="The entire Hexagonal Zero Collection." />
 <meta name="twitter:image" content="images/mixtape.png" />
 <meta property="og:url" content="index.html" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="HEXZbase" />
-<meta property="og:description" content="The entire Hexagonal Zero universe in a single Git repository." />
+<meta property="og:description" content="The entire Hexagonal Zero Collection." />
 <meta property="og:image" content="mixtape.png" />
 <link rel="icon" href="mixtape.png">
 <style>
@@ -327,8 +327,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 <body>
 <nav>
   
-  <a href="/">HEXZmixtape</a>
-  <div><audio controls loop src="Hexagonal_Zero.mp3">Your browser does not support the<code>audio</code> element.</audio></div>
+  <a>HEXZmixtape</a>
   <div><a href="https://mixtape.cell.computer/#/" target="_blank"><img src = "mixtape.png" width="159" height="98.3"></a></div>
   <div class='sub'>Welcome to the Hexagonal Zero series mixtape.</div>
   <div>
