--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 </script>
 </head>
 <body>
+  <div><audio controls loop src="Hexagonal_Zero.mp3">Your browser does not support the<code>audio</code> element.</audio></div>
 <nav>
   
   <a>HEXZmixtape</a>
