--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   } 
 body {
   font-family: 'Aldrich';
-  margin: 20;
+  margin: 20px 10px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: rgb(0, 0, 0);
