--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Hexagonal Zero Base" />
 <meta name="twitter:description" content="The entire Hexagonal Zero Collection." />
-<meta name="twitter:image" content="images/mixtape.png" />
-<meta property="og:url" content="index.html" />
+<meta name="twitter:image" content="mixtape.png" />
+<meta property="og:url" content="https://hexzmixtape.zerobeings.app/" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="HEXZbase" />
 <meta property="og:description" content="The entire Hexagonal Zero Collection." />
