--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="HEXZbase" />
 <meta property="og:description" content="The entire Hexagonal Zero Collection." />
-<meta property="og:image" content="mixtape.png" />
+<meta property="og:image" content="https://hexzmixtape.zerobeings.app/mixtape.png" />
 <link rel="icon" href="mixtape.png">
 <style>
 @font-face {
