--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Hexagonal Zero Base" />
 <meta name="twitter:description" content="The entire Hexagonal Zero Collection." />
-<meta name="twitter:image" content="mixtape.png" />
+<meta name="twitter:image" content="https://hexzmixtape.zerobeings.app/mixtape.png" />
 <meta property="og:url" content="https://hexzmixtape.zerobeings.app/" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="HEXZbase" />
