--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>HEXZmixtape</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@Zero_beings" />
 <meta name="twitter:title" content="Hexagonal Zero Base" />
 <meta name="twitter:description" content="The entire Hexagonal Zero Collection." />
 <meta name="twitter:image" content="https://hexzmixtape.zerobeings.app/mixtape.png" />
