--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>HEXZmixtape</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content="@Zero_beings" />
-<meta name="twitter:title" content="Hexagonal Zero Base" />
-<meta name="twitter:description" content="The entire Hexagonal Zero Collection." />
-<meta name="twitter:image" content="https://hexzmixtape.zerobeings.app/mixtape.png" />
-<meta property="og:url" content="https://hexzmixtape.zerobeings.app/" />
-<meta property="og:type" content="website" />
-<meta property="og:title" content="HEXZbase" />
-<meta property="og:description" content="The entire Hexagonal Zero Collection." />
-<meta property="og:image" content="https://hexzmixtape.zerobeings.app/mixtape.png" />
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@Zero_beings">
+<meta name="twitter:title" content="Hexagonal Zero Base">
+<meta name="twitter:description" content="The entire Hexagonal Zero Collection.">
+<meta name="twitter:image" content="https://hexzmixtape.zerobeings.app/mixtape.png">
+<meta property="og:url" content="https://hexzmixtape.zerobeings.app/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="HEXZbase">
+<meta property="og:description" content="The entire Hexagonal Zero Collection.">
+<meta property="og:image" content="https://hexzmixtape.zerobeings.app/mixtape.png">
 <link rel="icon" href="mixtape.png">
 <style>
 @font-face {
