--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1"></meta>
 <title>HEXZmixtape</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@Zero_beings">
-<meta name="twitter:title" content="Hexagonal Zero Base">
-<meta name="twitter:description" content="The entire Hexagonal Zero Collection.">
-<meta name="twitter:image" content="https://hexzmixtape.zerobeings.app/mixtape.png">
-<meta property="og:url" content="https://hexzmixtape.zerobeings.app/">
-<meta property="og:type" content="website">
-<meta property="og:title" content="HEXZbase">
-<meta property="og:description" content="The entire Hexagonal Zero Collection.">
-<meta property="og:image" content="https://hexzmixtape.zerobeings.app/mixtape.png">
+<meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+<meta name="twitter:card" content="summary_large_image"></meta>
+<meta name="twitter:site" content="@Zero_beings"></meta>
+<meta name="twitter:title" content="Hexagonal Zero Base"></meta>
+<meta name="twitter:description" content="The entire Hexagonal Zero Collection."></meta>
+<meta name="twitter:image" content="https://hexzmixtape.zerobeings.app/mixtape.png"></meta>
+<meta property="og:url" content="https://hexzmixtape.zerobeings.app/"></meta>
+<meta property="og:type" content="website"></meta>
+<meta property="og:title" content="HEXZbase"></meta>
+<meta property="og:description" content="The entire Hexagonal Zero Collection."></meta>
+<meta property="og:image" content="https://hexzmixtape.zerobeings.app/mixtape.png"></meta>
 <link rel="icon" href="mixtape.png">
 <style>
 @font-face {
