--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
 <title>HEXZmixtape</title>
 <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-<meta name="twitter:card" content="summary_large_image"></meta>
+<meta name="twitter:card" content="summary"></meta>
 <meta name="twitter:site" content="@Zero_beings"></meta>
 <meta name="twitter:title" content="Hexagonal Zero Base"></meta>
 <meta name="twitter:description" content="The entire Hexagonal Zero Collection."></meta>
