update image location

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ class Loader {
         }
 
         return `<div class='item'>
-  <a target="_blank" href="https://opensea.io/assets/ethereum/0x8f170f73076b7a45749677b1681b13366b3c80f7/${p.id}"><img src="https://gateway.pinata.cloud/${img}"></a>
+  <a target="_blank" href="https://opensea.io/assets/ethereum/0x8f170f73076b7a45749677b1681b13366b3c80f7/${p.id}"><img src="${p.image}"></a>
   <table>${table}</table>
   </div>`
       }).join("")
