--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
 <meta property="og:description" content="The entire Hexagonal Zero Collection."></meta>
 <meta property="og:image" content="https://hexzmixtape.zerobeings.app/mixtape.png"></meta>
 <link rel="icon" href="mixtape.png">
+<meta charset="utf-8">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Aldrich">
+    
 <style>
+
 @font-face {
   font-family: 'Aldrich';
   font-style: normal;
   font-weight: normal;
   src: local('Aldrich'), url('Aldrich-Regular.ttf') format('ttf');
   } 
+
 body {
   font-family: 'Aldrich';
   margin: 20px 10px;
