--- a/index.html
+++ b/index.html
@@ -99,11 +99,13 @@ nav td {
 .item img {
   width: 100%;
   border-radius: 6px 6px 0 0;
+  padding-bottom: 6px;
 }
 table {
   table-layout: fixed;
   width: 100%;
   border-spacing: 0;
+  border-color: white;
   
 }
 
