--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@ td {
   font-weight: bold;
 }
 .container td {
-  border-bottom: 2px solid rgba(0,0,255,0.04);
+  border-bottom: 2px solid white;
+  border-left: 4px white;
+  border-right: 4px white;
 }
 .container tr:hover td {
   background: #B9F49E;
