--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ table tr:last-child td:last-child {
 
 
 td {
-  background: white;
+  background: black;
   vertical-align: top;
   word-wrap:break-word;
   padding: 7px;
