--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ table tr:last-child td:last-child {
 
 
 td {
-  background: black;
+  background: white;
   vertical-align: top;
   word-wrap:break-word;
   padding: 7px;
@@ -142,6 +142,7 @@ td {
 }
 .container td:nth-child(1) {
   font-weight: bold;
+  
 }
 .container td {
   border-bottom: 2px solid white;
