--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@ td {
   border-bottom: 2px solid white;
   border-left: 4px white;
   border-right: 4px white;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
 }
 .container tr:hover td {
   background: #B9F49E;
