--- a/index.html
+++ b/index.html
@@ -140,9 +140,11 @@ td {
   cursor: pointer;
   
 }
+.container td:nth-child(1) tr:nth-child(1){
+  border-top-left-radius: 6px;
+}
 .container td:nth-child(1) {
-  font-weight: bold;
-  
+  font-weight: bold; 
 }
 .container td {
   border-bottom: 2px solid white;
