--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>HEXZmixtape</title>
-<meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-<meta name="twitter:card" content="summary"></meta>
-<meta name="twitter:site" content="@Zero_beings"></meta>
-<meta name="twitter:title" content="Hexagonal Zero Base"></meta>
-<meta name="twitter:description" content="The entire Hexagonal Zero Collection."></meta>
-<meta name="twitter:image" content="https://hexzmixtape.zerobeings.app/mixtape.png"></meta>
-<meta property="og:url" content="https://hexzmixtape.zerobeings.app/"></meta>
-<meta property="og:type" content="website"></meta>
-<meta property="og:title" content="HEXZbase"></meta>
-<meta property="og:description" content="The entire Hexagonal Zero Collection."></meta>
-<meta property="og:image" content="https://hexzmixtape.zerobeings.app/mixtape.png"></meta>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@Zero_beings">
+<meta name="twitter:title" content="Hexagonal Zero Base">
+<meta name="twitter:description" content="The entire Hexagonal Zero Collection.">
+<meta name="twitter:image" content="https://hexzmixtape.zerobeings.app/mixtape.png">
+<meta property="og:url" content="https://hexzmixtape.zerobeings.app/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="HEXZbase">
+<meta property="og:description" content="The entire Hexagonal Zero Collection.">
+<meta property="og:image" content="https://hexzmixtape.zerobeings.app/mixtape.png">
 <link rel="icon" href="mixtape.png">
 <meta charset="utf-8">
     <link rel="stylesheet"
@@ -95,7 +95,7 @@ nav td {
   width: 200px;
   padding: 5px;
   box-sizing: border-box;
-  border: white;
+  
 }
 .item img {
   width: 100%;
