--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@ table tr:last-child td:last-child {
 
 
 td {
-  background: white;
+  background: black;
   vertical-align: top;
   word-wrap:break-word;
   padding: 7px;
   box-sizing: border-box;
   font-size: 10px;
   cursor: pointer;
-  
+  color:white;
 }
 
 .container td:nth-child(1) {
