--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@ td {
 }
 .container td {
   border-bottom: 2px solid white;
+  border: 2px solid white;
 }
 .container tr:hover td {
   background: #B9F49E;
