--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@ table {
 }
 
 /* top-left border-radius */
-.container table tr:first-child th:first-child {
+table tr:first-child td:first-child {
   border-top-left-radius: 6px;
 }
 
 /* top-right border-radius */
-.container table tr:first-child th:last-child {
+table tr:first-child td:last-child {
   border-top-right-radius: 6px;
 }
 
