--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@ nav td {
   width: 200px;
   padding: 5px;
   box-sizing: border-box;
-  border-radius: 6px 6px 6px 6px;
+  
 }
 .item img {
   width: 100%;
-  border-radius: 6px 6px 6px 6px;
+  border-radius: 6px;
   padding-bottom: 10px;
 }
 table {
