--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ table {
   width: 100%;
   border-spacing: 0;
   border-color: white;
-  
+  border-collapse: collapse;
 }
 
 /* top-left border-radius */
