--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ table {
   border-spacing: 0;
   border-color: white;
   border-collapse: collapse;
+  border-radius: 6px;
 }
 
 /* top-left border-radius */
