--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ nav td {
   width: 200px;
   padding: 5px;
   box-sizing: border-box;
-  
+  border: 1px solid white;
 }
 .item img {
   width: 100%;
