--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@ nav td {
 }
 .item {
   width: 200px;
-  padding: 5px;
+  padding: 20px;
   box-sizing: border-box;
   border: 1px solid white;
+  border-radius: 6px;
 }
 .item img {
   width: 100%;
