--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@ document.addEventListener("DOMContentLoaded", async () => {
   <center>
     <div><button onclick="capture()">Capture</button></div>
     <a href="https://twitter.com/share?url=result&zerobeings" class="twitter-share-button" data-show-count="false">Tweet</a>
-    <div border-color="white">
-      <img src="" alt="" id="result">
+    <div>
+      <img src="" alt="" id="result" width="200px">
     </div>
     <script>
       function capture() {
