--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ document.addEventListener("DOMContentLoaded", async () => {
   </div>
   
 
-  <div class="generateCard" style="background-color: #35373C;">
+  <div class="generateCard" style="background-color: #35373C; border-radius: 10px;">
  
     <center><a style="font-size:32px; color: white;margin-top: 40px;">Generate Your Card:</a></center>
     <div>
