--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ nav td {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 20px;
+  padding: 20px 0;
   
 }
 .item {
@@ -517,7 +517,7 @@ document.addEventListener("DOMContentLoaded", async () => {
     <a class='btn2' onclick="downLoad()" id="downloader" href="#" style="text-decoration:none;">Download</a>
     </div>
     <div><img src="drGenerate.png" alt="" id="result" width="200px"></div>
-    <div class='twt'><button class='btn2' style="width: 40%; margin-right: 5px;text-decoration:none;">Mint</button><a style="text-decoration:none;" href="https://twitter.com/intent/tweet?url=zerobeings.xyz&hashtags=Zerobeings,HEXZ,NFTs,cc0&text=Mixtape%20&%20Trading%20Card%20Generator" class="btn2" data-show-count="false" data-via="Zero_beings">Tweet</a></div>
+    <div class='twt'><button class='btn2' style="width: 40%; margin-right: 5px;text-decoration:none;">Mint</button><a style="text-decoration:none;" href="https://twitter.com/intent/tweet?url=https://hexzmixtape.zerobeings.app/&hashtags=Zerobeings,HEXZ,NFTs,cc0&text=Mixtape%20&%20Trading%20Card%20Generator" class="btn2" data-show-count="false" data-via="Zero_beings">Tweet</a></div>
     
   </div>
 </div>
