--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ nav {
   opacity: 0.9;
 }
 .sub {
-  font-size: 14px;
+  font-size: 32px;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 input[type=text] {
@@ -101,7 +102,7 @@ nav td {
 }
 .item {
   width: 200px;
-  padding: 5px;
+  padding: 10px;
   box-sizing: border-box;
   background-color: black;
   border-radius: 10px;
@@ -460,19 +461,20 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 <nav>
   <div>
-    <center><a>HEXZmixtape</a></center>
+    <a style="font-size:120px; text-align: center;">HEXZmixtape</a>
     <audio class='audioPlayer' controls loop src="Hexagonal_Zero.mp3">Your browser does not support the<code>audio</code> element.</audio>
   </div>
 
   
   <div>
     <a href="https://mixtape.cell.computer/#/" target="_blank"><img src = "mixtape.png" width="159" height="98.3"></a></div>
-    <div class='sub'>Welcome to the Hexagonal Zero series mixtape.</div>
-  <div>
+    <div class='sub'>Welcome to the Hexagonal Zero Trading Card Factory</div>
+  <div>Created by...
     <a class='btn' href="https://zerobeings.xyz" target="_blank">Zero Beings</a>
     <a class='btn' href="https://twitter.com/Zero_beings" target="_blank">Twitter</a>
     <a class='btn' href="https://discord.gg/sjbVYr6ZXS" target="_blank">Discord</a>
-    <a class='btn' href="https://twitter.com/skogard" target="_blank">Powered by ^</a>
+    ...Powered by...<a class='btn' href="https://mixtape.cell.computer">Mixtape</a>...which is developed by...
+    <a class='btn' href="https://twitter.com/skogard" target="_blank">Skogard</a>
   </div>
 </nav>
 
@@ -509,14 +511,14 @@ document.addEventListener("DOMContentLoaded", async () => {
 
   <div class="generateCard" style="background-color: #35373C; border-radius: 10px;">
  
-    <center><a style="font-size:32px; color: white;margin-top: 40px;">Generate Your Card:</a></center>
+    <a style="font-size:32px; color: white;margin-top: 40px;text-align: center;">Generate Your Card:</a>
     <div>
       
     <button class='btn2' onclick="generate()" >Generate</button>
     <a class='btn2' onclick="downLoad()" id="downloader" href="#" style="text-decoration:none;">Download</a>
     </div>
-    <div><img src="drGenerate.png" alt="" id="result" width="200px"></div>
-    <div class='twt'><button class='btn2' style="width: 40%; margin-right: 5px;text-decoration:none;">Mint</button><a style="text-decoration:none;" href="https://twitter.com/intent/tweet?url=https://hexzmixtape.zerobeings.app/&hashtags=Zerobeings,HEXZ,NFTs,cc0&text=Mixtape%20&%20Trading%20Card%20Generator" class="btn2" data-show-count="false" data-via="Zero_beings">Tweet</a></div>
+    <div style="margin-bottom:20px ;"><img src="drGenerate.png" alt="" id="result" width="200px"></div>
+    <div class='twt'><a style="text-decoration:none;" href="https://twitter.com/intent/tweet?url=https://hexzmixtape.zerobeings.app/&hashtags=Zerobeings,HEXZ,NFTs,cc0&text=Mixtape%20&%20Trading%20Card%20Generator" class="btn2" data-show-count="false" data-via="Zero_beings">Tweet</a></div>
     
   </div>
 </div>
