--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ document.addEventListener("DOMContentLoaded", async () => {
     <a class='btn2' onclick="downLoad()" id="downloader" href="#" style="text-decoration:none;">Download</a>
     </div>
     <div style="margin-bottom:20px ;"><img src="drGenerate.png" alt="" id="result" width="200px"></div>
-    <div class='twt'><a style="text-decoration:none;" href="https://twitter.com/intent/tweet?url=https://hexzmixtape.zerobeings.app/&hashtags=Zerobeings,HEXZ,NFTs,cc0&text=Mixtape%20&%20Trading%20Card%20Generator" class="btn2" data-show-count="false" data-via="Zero_beings">Tweet</a></div>
+    <div class='twt'><a style="text-decoration:none;" href="https://twitter.com/intent/tweet?text=Mixtape...testing...1...2...3&url=https://hexzmixtape.zerobeings.app/&hashtags=Zerobeings,HEXZ,NFTs,cc0" class="btn2" data-show-count="false" data-via="Zero_beings">Tweet</a></div>
     
   </div>
 </div>
