--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ document.addEventListener("DOMContentLoaded", async () => {
     <a class='btn' href="https://zerobeings.xyz" target="_blank">Zero Beings</a>
     <a class='btn' href="https://twitter.com/Zero_beings" target="_blank">Twitter</a>
     <a class='btn' href="https://discord.gg/sjbVYr6ZXS" target="_blank">Discord</a>
-    ...Powered by...<a class='btn' href="https://mixtape.cell.computer">Mixtape</a>...developed by...
+    ...Powered by...<a class='btn' href="https://mixtape.cell.computer">Mixtape</a>...a tool developed by...
     <a class='btn' href="https://twitter.com/skogard" target="_blank">Skogard</a>
   </div>
 </nav>
