--- a/index.html
+++ b/index.html
@@ -561,6 +561,8 @@ document.addEventListener("DOMContentLoaded", async () => {
       }      
 
     </script>
+    <script src="https://cdn.websitepolicies.io/lib/cookieconsent/cookieconsent.min.js" defer></script>
+    <script>window.addEventListener("load",function(){window.wpcc.init({"border":"thin","corners":"small","colors":{"popup":{"background":"#222222","text":"#ffffff","border":"#B9F49E"},"button":{"background":"#B9F49E","text":"#000000"}}})});</script>
 </nav>
 <div class='container'>
   <div class='loader'>
